--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
-.keyboard__icon--active path {
-  fill: var(--main-text-color);
+:root {
+  --black: #000000;
+  --white: #ffffff;
+  --light-gray: #e4e4e4;
+  --dark-gray: #b6b8bb;
 }
 
-.keyboard,
-.keyboard * {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+.keyboard__icon--active path {
+  fill: var(--black);
 }
 
 .keyboard {
@@ -16,22 +15,15 @@
   bottom: 5px;
   right: 5px;
   padding: 10px 15px;
-  width: -moz-max-content;
   width: max-content;
   height: max-content;
-  border: 1px solid #e4e4e4;
-  background-color: var(--main-bg-color);
+  border: 1px solid var(--light-gray);
+  background-color: var(--white);
 }
 
 .keyboard__header {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
   margin-bottom: 10px;
   cursor: move;
@@ -39,7 +31,7 @@
 
 .keyboard__name {
   font-size: 18px;
-  color: var(--main-text-color);
+  color: var(--black);
 }
 
 .keyboard__close {
@@ -49,18 +41,12 @@
   font-size: 24px;
   line-height: 1;
   font-weight: 700;
-  color: var(--main-text-color);
+  color: var(--black);
 }
 
 .keyboard__line {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
 }
 
@@ -70,11 +56,9 @@
 
 .keyboard__button {
   font-size: 16px;
-  background-color: var(--results-videos__item-color);
-  color: var(--main-text-color);
+  background-color: var(--light-gray);
+  color: var(--black);
   border: none;
-  -webkit-transition: 0.3s;
-  -o-transition: 0.3s;
   transition: 0.3s;
 }
 
@@ -83,16 +67,15 @@
 }
 
 .keyboard__button:active {
-  -webkit-box-shadow: inset 0 0 20px 10px var(--bg-active-keyword);
-  box-shadow: inset 0 0 20px 10px var(--bg-active-keyword);
+  box-shadow: inset 0 0 20px 10px var(--white);
 }
 
 .keyboard__button--active {
-  background-color: var(--bg-hover-keyword);
+  background-color: var(--dark-gray);
 }
 
 .keyboard__button:hover {
-  background-color: var(--bg-hover-keyword);
+  background-color: var(--dark-gray);
 }
 
 .keyboard__button + .keyboard__button {
@@ -134,14 +117,8 @@
   height: 29px;
   max-width: 29px;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
 }
 
@@ -151,20 +128,10 @@
 }
 
 .keyboard__svg path {
-  fill: var(--main-text-color);
+  fill: var(--black);
 }
 
 .keyboard__space {
   height: 29px;
   width: 100%;
-}
-
-@media (max-width: 990px) {
-  .keyboard__icon {
-    display: none;
-  }
-
-  .microphone__icon {
-    display: none;
-  }
 }
